Fixed bubbles' alignment & footer

--- a/output.css
+++ b/output.css
@@ -620,6 +620,10 @@ html {
   top: 0px;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .z-\[100\] {
   z-index: 100;
 }
